# drone-perch

./: CMakeLists.txt  README.md  package.xml
include/: gnc_functions.hpp  main.hpp  perch.h  traj.hpp  trajectories.txt  trajectory_functions.hpp
src/: backup_test_trajectory.cpp  depth.cpp  generate_test_points.py  test_trajectory.cpp  trajectory_functions.cpp
src/RL/: Model.py  Policy.py  Q.py  QuadNew.py  QuadOld.py  Train.py  main.py  train.py
src/RL/SAC/: Model.py  Policy.py  Value.py
src/RL/SAC/utils/: ReplayBuffer.py
src/old_stuff/: generate_test_points.py  test_file_read
src/trajectory_follow/: depth.cpp  main.cpp  test_2m.cpp  test_trajectory.cpp
traj_RL/: CMakeLists.txt  package.xml  setup.py
traj_RL/include/SAC/: Model.py  Policy.py  Q.py  ReplayBuffer.py  Value.py
traj_RL/include/control_RL/: Anim.py  Duorotor_anchor.py
traj_RL/include/traj_RL/: Model.py  Policy.py  Q.py  ReplayBuffer.py  Run.py  Sim.py  Train.py  Trajectory.py  __init__.py  backup_Train.py  plot_results.py  py_gnc_functions.py  results.txt  utils.py
traj_RL/include/traj_RL/SAC/: Model.py  Value.py
traj_RL/src/: main.py  run_apm.py
trajectory_tracking/: CMakeLists.txt  README.md  package.xml
trajectory_tracking/include/: gnc_functions.hpp  perch_offline.h  point_cloud.h  traj.hpp  trajectories.txt  trajectory.hpp  trajectory_functions.hpp
trajectory_tracking/msg/: action.msg  state.msg
trajectory_tracking/sim/launch/: runway.launch
trajectory_tracking/sim/model/drone_kinect_fixed_rope5/: model.config  model.sdf
trajectory_tracking/sim/world/: drone_fixed_rope.world
trajectory_tracking/src/old_stuff/: generate_test_points.py  test_file_read.cpp
trajectory_tracking/src/trajectory_follow/: depth.cpp  main.cpp  rrt.cpp  rrt.h  test_trajectory.cpp  traj.cpp  trajectory_functions.cpp
